# zab-pkg-resolve

./: README.md  pyproject.toml
features/: environment.py
features/functional/: consumer_records.feature  index_management.feature  local_environment_provider.feature  package_lifecycle.feature
features/steps/: resolver_steps.py
features/system/: cache_and_records.feature  transaction_safety.feature  validation_and_extensibility.feature
src/zab_pkg_resolve/: __init__.py  indexes.py  locks.py  models.py  providers.py  resolver.py  scenario.py  store.py  targets.py  validation.py
src/zab_pkg_resolve/builtins/sources/: __init__.py  local_env.py  static.py
src/zab_pkg_resolve/interfaces/: __init__.py  sources.py
tests/: test_resolver.py
