[project]
name = "zab-pkg-resolve"
version = "0.2.0"
description = "Resolver and install-record boundary for install-centric Python package runtimes"
readme = "README.md"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["package-management", "resolver", "install-records", "zush"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ZackaryW/zab-pkg-resolve"
Repository = "https://github.com/ZackaryW/zab-pkg-resolve"
Issues = "https://github.com/ZackaryW/zab-pkg-resolve/issues"

[project.optional-dependencies]
dev = [
    "behave>=1.2.6",
]

[project.scripts]
zab-pkg-resolve = "zab_pkg_resolve:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
